# claude-code-history-viewer

./: Dockerfile  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  dev-mock-server.ts  package.json  vite.config.ts
.claude/: afc.config.md
.github/workflows/: updater-release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  utils.rs
src-tauri/src/commands/: archive.rs  claude_settings.rs  mod.rs  multi_provider.rs  project.rs  watcher.rs  wsl.rs
src-tauri/src/commands/session/: load.rs
src-tauri/src/models/: metadata.rs  session.rs  snapshot_tests.rs
src-tauri/src/models/snapshots/: claude_code_history_viewer_lib__models__snapshot_tests__session_snapshots__claude_session.snap
src-tauri/src/providers/: aider.rs  cline.rs  codex.rs  cursor.rs  mod.rs  opencode.rs
src-tauri/src/server/: handlers.rs  mod.rs
src/components/: FileContent.tsx  ProjectContextMenu.tsx
src/components/AnalyticsDashboard/components/: ProviderDistributionChart.tsx
src/components/AnalyticsDashboard/views/: GlobalStatsView.tsx
src/components/MessageNavigator/: MessageNavigator.tsx
src/components/MessageViewer/: MessageViewer.tsx  types.ts
src/components/MessageViewer/components/: ClaudeMessageNode.tsx  DateDivider.tsx  FloatingDateOverlay.tsx  MessageHeader.tsx  VirtualizedMessageRow.tsx
src/components/MessageViewer/helpers/: flattenMessageTree.ts  heightEstimation.ts  messageHelpers.ts
src/components/ProjectTree/: index.tsx
src/components/ProjectTree/components/: ProjectItem.tsx
src/components/SessionItem/: SessionItem.tsx  types.ts
src/components/SessionItem/components/: SessionContextMenu.tsx  SessionNameEditor.tsx
src/components/SessionItem/hooks/: useSessionEditing.ts
src/components/SettingsManager/: UnifiedSettingsManager.tsx
src/components/SettingsManager/sections/: CustomDirectoriesSection.tsx  index.ts
src/components/common/: Markdown.tsx
src/components/contentRenderer/: ClaudeContentArrayRenderer.tsx  CommandRenderer.tsx  ContainerUploadRenderer.tsx  TaskNotificationRenderer.tsx  index.ts
src/components/messageRenderer/: MessageContentDisplay.tsx  SystemMessageRenderer.tsx
src/components/modals/feedback/: FeedbackModal.tsx
src/components/modals/globalSearch/: GlobalSearchModal.tsx
src/components/renderers/: RendererCard.tsx  styles.ts
src/components/toolResultRenderer/: ClaudeSessionHistoryRenderer.tsx  ClaudeToolResultItem.tsx  ContentArrayRenderer.tsx  StringRenderer.tsx  WebSearchRenderer.tsx
src/hooks/: useExternalLinks.ts
src/i18n/locales/en/: common.json  renderers.json  session.json  settings.json
src/i18n/locales/ja/: common.json  renderers.json  session.json  settings.json
src/i18n/locales/ko/: common.json  renderers.json  session.json  settings.json
src/i18n/locales/zh-CN/: common.json  renderers.json  session.json  settings.json
src/i18n/locales/zh-TW/: common.json  renderers.json  session.json  settings.json
src/layouts/: AppLayout.tsx
src/layouts/Header/: Header.tsx
src/services/export/: contentExtractor.ts  htmlExporter.ts  jsonExporter.ts  markdownExporter.ts
src/shared/: RendererHeader.tsx
src/store/slices/: metadataSlice.ts  projectSlice.ts  searchSlice.ts
src/test/: AnsiText.test.tsx  MessageNavigator.accessibility.test.tsx  ansiToHtml.test.ts  metadataSlice.test.ts  useSessionEditing.test.tsx
src/types/: content.types.ts  index.ts  tool.types.ts
src/types/core/: content.ts  message.ts  project.ts  session.ts  tool.ts
src/utils/: ansiToHtml.ts  contentTypeGuards.ts  platform.ts  providers.ts  time.ts
